🚀 Streamlined UX - Removed redundant modal step
✅ Fixed Redundant User Flow:
- Removed confusing double selection (main buttons + modal buttons)
- NEW GAME button now directly opens name input (no redundant 'choose' step)
- JOIN GAME button now directly opens name input (no redundant 'choose' step)
- Eliminated unnecessary 'Choose how you want to play' modal step

🎯 New Streamlined Flow:
- NEW GAME: Click button → Enter name → 'Begin Game' → Get room code
- JOIN GAME: Click button → Enter name → 'Continue' → Enter room code → 'Connect'
- Much cleaner and more intuitive user journey

💅 UX Improvements:
- Back button now says 'Cancel' instead of 'Back' for clarity
- Removed setTimeout delays that were causing visual glitches
- Better modal state management with proper step hiding
- Cleaner event handling without redundant steps

🔧 Technical Cleanup:
- Removed unused showGameModeStep() calls
- Simplified modal reset logic
- Better separation of concerns for modal steps
- Maintained backward compatibility for modal structure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span id="proceed-text">Begin Game</span>
                     </button>
                     
-                    <button id="back-to-mode" class="btn btn-outline">← Back</button>
+                    <button id="back-to-mode" class="btn btn-outline">← Cancel</button>
                 </div>
                 
                 <!-- Step 3: Room code input (only for join) -->
