🔧 Fixed modal state issues - proper step visibility
✅ Fixed Critical Modal Bug:
- Added 'hidden' class to game-mode-selection div by default
- Modal now properly starts with all steps hidden
- Fixed the issue where redundant 'Choose how you want to play' was showing
- Fixed empty modal on second click by ensuring proper reset

🎯 Improved Modal Reset Logic:
- showNameModal() now calls resetModal() first for clean state
- Added input validation class cleanup in resetModal()
- Ensures modal always starts fresh regardless of previous state
- Better state management prevents modal caching issues

🚀 Perfect User Flow Now Working:
- NEW GAME: Click → Name Input (no redundant choice!)
- JOIN GAME: Click → Name Input (no redundant choice!)
- No more empty modals on subsequent clicks
- Consistent behavior every time

The modal flow is now completely fixed - users will never see the redundant game mode selection step!

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h2 id="modal-title">🎮 Welcome to Connect 4!</h2>
                 <p id="modal-subtitle">Choose how you want to play</p>
                 
-                <!-- Step 1: Choose game mode -->
-                <div id="game-mode-selection" class="action-buttons">
+                <!-- Step 1: Choose game mode (now hidden by default) -->
+                <div id="game-mode-selection" class="action-buttons hidden">
                     <button id="select-new-game" class="btn btn-primary">
                         <span class="btn-icon">🎯</span>
                         New Game
