🚪 Added Leave Game functionality with smart button management
✨ Smart Button State Management:
- NEW/JOIN buttons hidden once player enters a game
- Replaced with single 'Leave Game' button (red danger style)
- Buttons automatically switch back when leaving/disconnecting
- Much cleaner UI - only shows relevant actions

🎯 Perfect User Experience:
- NEW GAME: Click → Enter name → 'Begin Game' → Shows 'Leave Game' button
- JOIN GAME: Click → Enter name → Join → Shows 'Leave Game' button
- No more confusing irrelevant buttons when already in game

⚠️ Leave Game Confirmation:
- Smart confirmation modal with context-aware messages
- Different message for active games vs waiting for players
- 'Yes, Leave Game' (red) and 'Stay in Game' (grey) options
- Prevents accidental game exits

🔧 Technical Features:
- Clean disconnect/reconnect logic for leaving games
- Proper game state cleanup (gameId, playerNumber, etc.)
- Chat input disabled when not in game
- Room info cleared when leaving
- Handles opponent disconnection gracefully

💅 Enhanced Styling:
- New .btn.danger class for destructive actions (red with hover effects)
- .modal-buttons layout for side-by-side confirmation buttons
- Consistent visual hierarchy throughout

The UX now perfectly matches user intent - once you're in a game, you can only leave it, not start another!

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <div class="controls">
                     <button id="new-game-btn" class="btn">🎯 New Game</button>
                     <button id="join-game-btn" class="btn">🚪 Join Game</button>
+                    <button id="leave-game-btn" class="btn danger hidden">🚺 Leave Game</button>
                     <button id="show-leaderboard" class="btn secondary">🏆 Leaderboard</button>
                     <button id="audio-toggle" class="btn secondary small">🔊 Audio: ON</button>
                 </div>
@@ -141,6 +142,18 @@
                 <!-- Leaderboard will be populated here -->
             </div>
             <button id="leaderboard-close" class="btn">Close</button>
+        </div>
+    </div>
+
+    <!-- Leave Game Confirmation Modal -->
+    <div id="leave-confirmation-modal" class="modal hidden">
+        <div class="modal-content">
+            <h2>⚠️ Leave Game?</h2>
+            <p id="leave-message">Are you sure you want to leave the current game?</p>
+            <div class="modal-buttons">
+                <button id="confirm-leave" class="btn danger">Yes, Leave Game</button>
+                <button id="cancel-leave" class="btn secondary">Stay in Game</button>
+            </div>
         </div>
     </div>
 
