--- a/index.html
+++ b/index.html
@@ -122,10 +122,7 @@
                     </ul>
                 </div>
 
-                <div class="connection-status">
-                    <div id="connection-indicator" class="disconnected"></div>
-                    <span id="connection-text">Disconnected</span>
-                </div>
+                <!-- Connection status removed - now shown in header status only -->
 
                 <!-- Jukebox removed -->
             </div>
