--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
         <div class="modal-content">
             <h2 id="modal-title">Game Over</h2>
             <p id="modal-message"></p>
-            <button id="rematch-btn" class="btn secondary hidden">🔄 Rematch</button>
-            <button id="modal-close" class="btn">Close</button>
+            <div class="gameover-actions">
+                <button id="rematch-btn" class="btn hidden">🔄 Rematch</button>
+                <button id="modal-close" class="btn secondary">Close</button>
+            </div>
         </div>
     </div>
 
