docs: add lobby & spectator mode, stop watching control, integrity guards

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                         <button id="leave-game-btn" class="btn danger toolbar-btn hidden" title="Leave Game">🚪 <span class="label">Leave</span></button>
                         <button id="show-leaderboard" class="btn ghost toolbar-btn" title="Leaderboard (Top 10)">🏆 <span class="label">Leaderboard</span></button>
                         <button id="audio-toggle" class="btn ghost toolbar-btn" title="Toggle Audio">🔊 <span class="label audio-state">ON</span></button>
+                        <button id="stop-spectating-btn" class="btn ghost toolbar-btn hidden" title="Stop Watching">👁️‍🗨️ <span class="label">Stop Watching</span></button>
                     </div>
                 </div>
             </div>
