--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="logo-section">
             <img src="assets/Logo3.png" alt="Connect 4 Logo" class="game-logo" onerror="this.style.display='none'; document.querySelector('.fallback-title').style.display='block';">
-            <h1 class="fallback-title" style="display: none;">Connect 4</h1>
+            <h1 class="fallback-title">Connect 4</h1>
         </div>
         
     <!-- Status bar moved into sidebar below chat -->
@@ -53,7 +53,7 @@
                 <div id="room-code-step" class="hidden">
                     <div class="input-group">
                         <label for="room-code-input">Room Code</label>
-                        <input type="text" id="room-code-input" placeholder="Enter 6-character code" maxlength="6" style="text-transform: uppercase">
+                        <input type="text" id="room-code-input" placeholder="Enter 6-character code" maxlength="6">
                         <small>Ask your friend for the room code they received</small>
                     </div>
                     
@@ -127,14 +127,20 @@
                     </div>
                 </div>
 
-                <div class="game-info">
-                    <h3>How to Play</h3>
-                    <ul>
-                        <li>Click on a column to drop your piece</li>
-                        <li>Connect 4 pieces in a row to win</li>
-                        <li>Win horizontally, vertically, or diagonally</li>
-                        <li>Take turns with your opponent</li>
-                    </ul>
+                <div class="bottom-stack">
+                    <div class="game-info">
+                        <h3>How to Play</h3>
+                        <ul>
+                            <li>Click on a column to drop your piece</li>
+                            <li>Connect 4 pieces in a row to win</li>
+                            <li>Win horizontally, vertically, or diagonally</li>
+                            <li>Take turns with your opponent</li>
+                        </ul>
+                    </div>
+                    <div id="lobby-panel" class="lobby-panel">
+                        <div class="lobby-header">Lobby</div>
+                        <div class="lobby-empty">Loading...</div>
+                    </div>
                 </div>
 
                 <!-- Connection status removed - now shown in header status only -->
