--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="assets/Logo3.png" alt="Connect 4 Logo" class="game-logo" onerror="this.style.display='none'; document.querySelector('.fallback-title').style.display='block';">
+            <img id="game-logo" src="assets/Logo3.png" alt="Connect 4 Logo" class="game-logo" onerror="this.style.display='none'; document.querySelector('.fallback-title').style.display='block';">
             <h1 class="fallback-title">Connect 4</h1>
         </div>
         
@@ -185,7 +185,7 @@
                 <div class="bottom-stack">
                     <div class="game-info">
                         <h3>How to Play</h3>
-                        <ul>
+                        <ul id="game-instructions">
                             <li>Click on a column to drop your piece</li>
                             <li>Connect 4 pieces in a row to win</li>
                             <li>Win horizontally, vertically, or diagonally</li>
